--- a/HelloGap/assets/www/chat3.html
+++ b/HelloGap/assets/www/chat3.html
@@ -24,7 +24,7 @@
         <br>
 
         <ul data-role="listview" data-inset="true">
-            <li><a href="#detail"  data-rel="popup"> <img src="img/pokeball.jpg"> <h3>Poke Buddies </h3> </a>
+            <li><a href="#detail"  data-rel="popup"> <img src="img/pikachu.gif"> <h3>Pikachu Dance Off </h3> </a>
             <li data-icon="plus"><a href="#new_detail" data-rel="popup"> Add Friends to chat </a> </li>
         </ul>
 
@@ -32,17 +32,17 @@
         <br>
 
         <div style="width: 100%; height: 120px;">
-            <a href="charizard.html">
-            <img src="img/Charizard.png" style="width: 40px;">
+            <a href="#">
+                <img src="img/pikachu.png" style="width: 40px;">
             </a>
             <ul data-role="listview" data-inset="true" style="width: 60%;">
-                <li>Charizaaaaard!!! </li>
+                <li>Pikaaa! </li>
             </ul>
         </div>
 
         <div style="width: 100%; height: 120px; text-align: right;">
             <a href="profile.html">
-            <img src="img/pikachu.png" style="width: 40px;">
+                <img src="img/pikachu.png" style="width: 40px;">
             </a>
             <ul data-role="listview" data-inset="true" style="width: 60%; position: absolute; right: 20px;">
                 <li>Pika Pi! </li>
@@ -50,26 +50,22 @@
         </div>
 
         <div style="width: 100%; height: 120px;">
-            <a href="mew.html">
-            <img src="img/Mew.png" style="width: 40px;">
+            <a href="#">
+                <img src="img/ditto.png" style="width: 40px;">
             </a>
             <ul data-role="listview" data-inset="true" style="width: 60%;">
-                <li>Mew! </li>
+                <li>.... </li>
             </ul>
         </div>
         <br>
         <div style="width: 100%; height: 120px;">
-            <a href="mewtwo.html">
-            <img src="img/Mewtwo.png" style="width: 40px;">
+            <a href="#">
+                <img src="img/pikachu.png" style="width: 40px;">
             </a>
             <ul data-role="listview" data-inset="true" style="width: 60%;">
-                <li>Can none of you lesser beings speak English? </li>
-                <li>Anyone got any weed? </li>
+                <li>Pika Pika! </li>
             </ul>
         </div>
-        <br>
-        <br>
-        <br>
         <br>
         <br>
         <div>
@@ -91,9 +87,9 @@
     <div data-role="footer" data-position="fixed">
         <div data-role="navbar">
             <ul>
-                <li><a href="home.html" rel="external" class="ui-btn-active ui-state-persist" data-icon="home">Chats</a></li>
+                <li><a href="home.html" rel="external" data-icon="home">Chats</a></li>
                 <li><a href="friend.html" rel="external" data-icon="plus">Friends</a></li>
-                <li><a href="group.html" rel="external" data-icon="grid">Groups</a></li>
+                <li><a href="group.html" rel="external" class="ui-btn-active ui-state-persist" data-icon="grid">Groups</a></li>
                 <li><a href="post.html" rel="external" data-icon="star">Posts</a></li>
                 <li><a href="profile.html" rel="external" data-icon="gear">Profile</a></li>
             </ul>
@@ -101,7 +97,7 @@
     </div><!-- /footer -->
 
     <div data-role="popup" id="detail">
-        <img src="img/pokeball.jpg" style="width: 200px;">
+        <img src="img/pikachu.gif" style="width: 200px;">
 
         <br>
 
