--- a/HelloGap/assets/www/chat3.html
+++ b/HelloGap/assets/www/chat3.html
@@ -81,6 +81,9 @@
             <li data-icon="plus"> <img src="img/ash.png"> <h3>Ash Ketchum</h3> </li>
             <li data-icon="plus"> <img src="img/Harry Potter.jpg"> <h3>Harry Potter</h3> </li>
         </ul>
+        <p style="font-size: 14px;">4 Members</p>
+        <p style="font-size: 14px;">Send invitations to email:</p>
+        <input type="email">
     </div>
 
 
@@ -102,8 +105,8 @@
         <br>
 
         <p style="font-size: 25px; font-weight: bold;">Name</p>
-        <p style="font-size: 14px;">Poke Buddies</p>
-        <p style="font-size: 14px;">4 Members</p>
+        <p style="font-size: 14px;">Pikachu Dance Off</p>
+        <p style="font-size: 15px; font-weight: bold;">Invite Members with email</p>
     </div>
 
 </div><!-- /page -->
