--- a/HelloGap/assets/www/friend.html
+++ b/HelloGap/assets/www/friend.html
@@ -126,7 +126,7 @@
     <div data-role="popup" id="new_detail5">
 
         <p style="font-size: 20px; font-weight: bold;">Email Address</p>
-        <input type="text">
+        <input type="email">
 
         <br>
 
