--- a/HelloGap/assets/www/group.html
+++ b/HelloGap/assets/www/group.html
@@ -28,11 +28,11 @@
 		<li>Your Groups</li>
 		<li><a href="chat3.html"  data-transition="slidedown" rel="external"> <img src="img/pikachu.gif"> <h3>Pikachu Dance Off</h3> <br>
             <p>Pika Pika! </p>
-            <span class="ui-li-count" style="color:red"> <red>2</red> </span> </a> </li>
+            <span class="ui-li-count" style="color:red"> <red>1</red> </span> </a> </li>
             <br>
 
         <li>Other Groups</li>
-		<li><a href="chat1.html"  data-transition="slidedown" rel="external"> <img src="img/ash.png"> <h3>Ash Ketchum</h3> <br> <p>Hey Pikachu! I choose you! </p> <span class="ui-li-count" style="color:red"> <red>1</red> </span> </a> </li>
+		<li><a href="chat1.html"  data-transition="slidedown" rel="external"> <img src="img/Hermione Granger.jpg"> <h3>Hermione Fan Club &hearts;</h3> <br> <p>It's leviOsa, not leviosA </p> <span class="ui-li-count" style="color:red"> <red>1</red> </span> </a> </li>
 
 	</ul>
 	<br>
@@ -49,8 +49,8 @@
 		<li data-icon="plus"> <img src="img/ash.png"> <h3>Ash Ketchum</h3> </li>
 		<li data-icon="plus"> <img src="img/Harry Potter.jpg"> <h3>Harry Potter</h3> </li>
 	</ul>
-	<p style="font-size: 15px; font-weight: bold;">Send invitiation to email:</p>
-	<input type="text">
+    <p style="font-size: 15px; font-weight: bold;">Send invitiation to email:</p>
+	<input type="email">
 	</p>
 </div>
 
