--- a/HelloGap/assets/www/chat4.html
+++ b/HelloGap/assets/www/chat4.html
@@ -24,48 +24,34 @@
         <br>
 
         <ul data-role="listview" data-inset="true">
-            <li><a href="#detail"  data-rel="popup"> <img src="img/pikachu.gif"> <h3>Pikachu Dance Off </h3> </a>
-            <li data-icon="plus"><a href="#new_detail" data-rel="popup"> Add Friends to chat </a> </li>
+            <li><a href="#detail"  data-rel="popup"> <img src="img/Hermione Granger.jpg"> <h3>Hermione Fan Club &hearts; </h3> </a>
         </ul>
 
         <br>
         <br>
-
-        <div style="width: 100%; height: 120px;">
-            <a href="#">
-                <img src="img/pikachu.png" style="width: 40px;">
-            </a>
-            <ul data-role="listview" data-inset="true" style="width: 60%;">
-                <li>Pikaaa! </li>
-            </ul>
-        </div>
 
         <div style="width: 100%; height: 120px; text-align: right;">
             <a href="profile.html">
                 <img src="img/pikachu.png" style="width: 40px;">
             </a>
             <ul data-role="listview" data-inset="true" style="width: 60%; position: absolute; right: 20px;">
-                <li>Pika Pi! </li>
+                <li>Pika Leviosa </li>
             </ul>
         </div>
 
-        <div style="width: 100%; height: 120px;">
-            <a href="#">
-                <img src="img/ditto.png" style="width: 40px;">
-            </a>
-            <ul data-role="listview" data-inset="true" style="width: 60%;">
-                <li>.... </li>
-            </ul>
-        </div>
         <br>
         <div style="width: 100%; height: 120px;">
             <a href="#">
-                <img src="img/pikachu.png" style="width: 40px;">
+                <img src="img/Hermione Granger.jpg" style="width: 40px;">
             </a>
             <ul data-role="listview" data-inset="true" style="width: 60%;">
-                <li>Pika Pika! </li>
+                <li>OMG, so many cute creatures! Btw Pikachu..</li>
+                <li>It's leviOsa, not leviosA </li>
             </ul>
         </div>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <div>
@@ -81,6 +67,7 @@
             <li data-icon="plus"> <img src="img/ash.png"> <h3>Ash Ketchum</h3> </li>
             <li data-icon="plus"> <img src="img/Harry Potter.jpg"> <h3>Harry Potter</h3> </li>
         </ul>
+        <p style="font-size: 14px;">4 Members</p>
         <p style="font-size: 14px;">Send invitations to email:</p>
         <input type="email">
     </div>
@@ -99,14 +86,13 @@
     </div><!-- /footer -->
 
     <div data-role="popup" id="detail">
-        <img src="img/pikachu.gif" style="width: 200px;">
+        <img src="img/Hermione Granger.jpg" style="width: 200px;">
 
         <br>
 
         <p style="font-size: 25px; font-weight: bold;">Name</p>
-        <p style="font-size: 14px;">Pikachu Dance Off</p>
-        <p style="font-size: 14px;">4 Members</p>
-
+        <p style="font-size: 14px;">Hermione Fan Club &hearts;</p>
+        <p style="font-size: 14px;">3 Members</p>
     </div>
 
 </div><!-- /page -->
