--- a/HelloGap/assets/www/post.html
+++ b/HelloGap/assets/www/post.html
@@ -12,6 +12,46 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
+		<style>
+			body {font-family: "Lato", sans-serif;}
+
+			/* Style the tab */
+			div.tab {
+				overflow: hidden;
+				border: 1px solid #ccc;
+				background-color: #f1f1f1;
+			}
+
+			/* Style the buttons inside the tab */
+			div.tab button {
+				background-color: inherit;
+				float: left;
+				border: none;
+				outline: none;
+				cursor: pointer;
+				padding: 14px 16px;
+				transition: 0.3s;
+				font-size: 17px;
+			}
+
+			/* Change background color of buttons on hover */
+			div.tab button:hover {
+				background-color: #ddd;
+			}
+
+			/* Create an active/current tablink class */
+			div.tab button.active {
+				background-color: #ccc;
+			}
+
+			/* Style the tab content */
+			.tabcontent {
+				display: none;
+				padding: 6px 12px;
+				border: 1px solid #ccc;
+				border-top: none;
+			}
+		</style>
 </head> 
 
 <body> 
@@ -21,6 +61,64 @@
 
 		<img src="img/logo.png">
 
+		<ul data-role="listview" data-filter="true">
+			<li data-icon="plus"><a href="#new_detail" data-rel="popup"> Post Something </a> </li>
+			<li><img src="img/Venusaur.png"> <h3>Venusaur</h3> <br> <p>I like leaves </p> </li>
+			<img src="img/leaves.jpg" style="width: 100%; height: 40%">
+			<li><a href="#comment" data-rel="popup"><h3>Comments</h3></a></li>
+			<li><img src="img/pikachu.png"> <h3>Pikachu</h3> <br> <p>I like to dance </p> </li>
+			<img src="img/pikachu.gif">
+			<li><a href="#comment2" data-rel="popup"><h3>Comments</h3></a></li>
+		</ul>
+	</div>
+
+	<div data-role="popup" id="new_detail" style="width: 300px;">
+		<div class="tab">
+			<button class="tablinks" onclick="openCity(event, 'London')">Status</button>
+			<button class="tablinks" onclick="openCity(event, 'Paris')">Picture</button>
+			<button class="tablinks" onclick="openCity(event, 'Tokyo')">Video</button>
+		</div>
+
+		<div id="London" class="tabcontent">
+			<h3>Status</h3>
+			<input type="text">
+		</div>
+
+		<div id="Paris" class="tabcontent">
+			<h3>Picture</h3>
+			<input placeholder='Caption' type="text">
+			<button>Upload Image</button>
+		</div>
+
+		<div id="Tokyo" class="tabcontent">
+			<h3>Video</h3>
+			<input placeholder='Caption' type="text">
+			<button>Upload Video</button>
+		</div>
+		<div>
+		<select name="permissions">
+			<option value="private">Private</option>
+			<option value="public">Public</option>
+			<option value="limited">Limited</option>
+		</select>
+		<button>Post Content</button>
+		</div>
+	</div>
+
+	<div data-role="popup" id="comment">
+		<ul data-role="listview">
+			<li>Comments</li>
+			<li><img src="img/Charizard.png"> <h3>Charizard</h3> <br> <p>I like burning leaves </p> </li>
+			<input type="text">
+			<button>Comment</button>
+	</div>
+
+	<div data-role="popup" id="comment2">
+		<ul data-role="listview">
+			<li>Comments</li>
+			<li>None</li>
+			<input type="text">
+			<button>Comment</button>
 	</div>
 
 	<div data-role="footer" data-position="fixed">		
@@ -36,5 +134,22 @@
 	</div><!-- /footer -->
 
 </div><!-- /page -->
+
+<script>
+    function openCity(evt, cityName) {
+        var i, tabcontent, tablinks;
+        tabcontent = document.getElementsByClassName("tabcontent");
+        for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+        }
+        tablinks = document.getElementsByClassName("tablinks");
+        for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
+        }
+        document.getElementById(cityName).style.display = "block";
+        evt.currentTarget.className += " active";
+    }
+</script>
+
 </body>
 </html>
