Completed Posts not profile

--- a/HelloGap/assets/www/chat2.html
+++ b/HelloGap/assets/www/chat2.html
@@ -64,7 +64,7 @@
             </a>
             <ul data-role="listview" data-inset="true" style="width: 60%;">
                 <li>Can none of you lesser beings speak English? </li>
-                <li>Anyone got any weed? </li>
+                <li>Anyone got any berries? </li>
             </ul>
         </div>
         <br>
