--- a/HelloGap/assets/www/group.html
+++ b/HelloGap/assets/www/group.html
@@ -51,6 +51,7 @@
 	</ul>
     <p style="font-size: 15px; font-weight: bold;">Send invitiation to email:</p>
 	<input type="email">
+    <button>Send</button>
 	</p>
 </div>
 
