--- a/HelloGap/assets/www/home.html
+++ b/HelloGap/assets/www/home.html
@@ -27,7 +27,7 @@
             <li><a href="#new_detail2" data-rel="popup">Chat Invites <span class="ui-li-count" style="color:red"> <red>1</red> </span></a></li>
             <li><a href="chat.html"  data-transition="slidedown" rel="external"> <img src="img/Harry Potter.jpg"> <h3>Harry Potter</h3> <br> <p>See you tomorrow! </p> <span class="ui-li-count" style="color:red"> <red>1</red> </span> </a> </li>
 			<li><a href="chat1.html"  data-transition="slidedown" rel="external"> <img src="img/ash.png"> <h3>Ash Ketchum</h3> <br> <p>Hey Pikachu! I choose you! </p> <span class="ui-li-count" style="color:red"> <red>1</red> </span> </a> </li>
-			<li><a href="chat2.html"  data-transition="slidedown" rel="external"> <img src="img/pokeball.jpg"> <h3>Poke Buddies</h3> <br> <p>Anyone got any weed? </p> <span class="ui-li-count" style="color:red"> <red>2</red> </span> </a> </li>
+			<li><a href="chat2.html"  data-transition="slidedown" rel="external"> <img src="img/pokeball.jpg"> <h3>Poke Buddies</h3> <br> <p>Anyone got any berries? </p> <span class="ui-li-count" style="color:red"> <red>2</red> </span> </a> </li>
 
         </ul>
         <br>
