--- a/HelloGap/assets/www/group.html
+++ b/HelloGap/assets/www/group.html
@@ -49,7 +49,7 @@
 		<li data-icon="plus"> <img src="img/ash.png"> <h3>Ash Ketchum</h3> </li>
 		<li data-icon="plus"> <img src="img/Harry Potter.jpg"> <h3>Harry Potter</h3> </li>
 	</ul>
-    <p style="font-size: 15px; font-weight: bold;">Send invitiation to email:</p>
+    <p style="font-size: 15px; font-weight: bold;">Send invitation to email:</p>
 	<input type="email">
     <button>Send</button>
 	</p>
