--- a/HelloGap/assets/www/profile.html
+++ b/HelloGap/assets/www/profile.html
@@ -82,7 +82,7 @@
 			<li data-icon="plus"><a href="#new_detail" data-rel="popup"> Make Changes </a> </li>
 		</ul>
 		<br>
-		<a href="home.html" data-role="button" rel="external" style="color: red;"> Log Out </a>
+		<a href="index.html" data-role="button" rel="external" style="color: red;"> Log Out </a>
 
 	</div>
 
