--- a/HelloGap/assets/www/login.html
+++ b/HelloGap/assets/www/login.html
@@ -40,7 +40,7 @@
         <img src="img/logo.png">
 
         <div id="branding">
-            <h1>Sign Up</h1>
+            <h1>Sign In</h1>
         </div>
 
         <br>
